sample/msvc/error/c2271.cpp
// C2271.cpp
// compile with: /c
typedef unsigned long int size_t;
void* operator new(size_t) const {   // C2271
// try the following line instead
// void* operator new(size_t) {
   return 0;
}

struct X {
   static void* operator new(size_t) const;   // C2271
   // try the following line instead
   // void * X::operator new(size_t) const;   // static member operator new
};
